<resources>
    <string name="app_name">Academia</string>

    <!--Presentation screen-->
    <string name="presentation">Olá Professor! Escolha seu nome na lista abaixo</string>



    <!--Initial Screen-->
    <string name="welcome">Olá professor</string>
    <string name="primaryName">Academia</string>


    <string name="create_treino">Criar treino</string>
    <string name="see_alunos">Ver todos os alunos</string>
    <string name="new_aluno">Novo Aluno</string>
    <string name="meus_alunos">Meus Alunos</string>
    <string name="exercicios">Exercícios</string>
    <string name="criar_treino">Criar Treino</string>
    <string name="outros_professores">Outros Professores</string>
    <string name="ver_aparelhos">Aparelhos</string>
    <string name="ver_grupos">Grupos e Exercícios</string>

    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="fazer_login">Favor fazer login</string>
    <string name="ok">OK</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <!--New aluno-->
    <string name="name">Nome:</string>
    <string name="data">Data de Nascimento:</string>
    <string name="date_format">Formato: dd/mm/aaaa</string>

    <string name="dorPeitoAtividades">O aluno tem dor no peito provocada por atividades físicas?</string>
    <string name="dorPeitoMes">O aluno sentiu dor no peito no último mês?</string>
    <string name="perdaConsciencia">O aluno já perdeu a consciência em alguma ocasião ou sofreu alguma queda em virtude de tontura?</string>
    <string name="problemaOsseo">O aluno tem algum problema ósseo ou articular que poderia agravar-se com a prática de atividades físicas?</string>
    <string name="tabagista">Tabagista?</string>
    <string name="diabetico">Diabético?</string>
    <string name="cardiaco">Histórico familiar de ataque cardíaco? (Pai ou irmão de 55 anos ou mãe ou irmã antes dos 65 anos)</string>
    <string name="lesoes">Lesões</string>
    <string name="observacoes">Observações</string>
    <string name="disponibilidade">Disponibilidade</string>
    <string name="treinoEsp">Treino Específico</string>
    <string name="save">Salvar</string>
    <string name="save_training">Treino</string>
    <string name="marcadores">Outros marcadores</string>

    <string name="segunda">Seg</string>
    <string name="terca">Ter</string>
    <string name="quarta">Qua</string>
    <string name="quinta">Qui</string>
    <string name="sexta">Sex</string>
    <string name="sabado">Sab</string>
    <string name="domingo">Dom</string>
    <string name="editar">Editar</string>



    <!--Edit grupos-->
    <string name="insira_exercicio">Insira o nome do exercício:</string>
    <string name="exercicio">Exercício</string>
    <string name="grupo_muscular">Escolha o grupo muscular a qual o exercício pertence:</string>
    <string name="salvar">Salvar</string>
    <string name="salvo_succ">Salvo com sucesso</string>
    <string name="ver_treino">Ver treino</string>
    <string name="series">Séries</string>
    <string name="repeticoes">Repetições</string>
    <string name="carga">Carga</string>
    <string name="tipo">Identificador:</string>
    <string name="excluir_aluno">Excluir aluno</string>
    <string name="editar_aluno">Editar aluno</string>
    <string name="mostrar_frequencia">Mostrar frequência</string>
    <string name="salvar_treino">Salvar Treino</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_treino">Editar treino</string>
    <string name="excluir_treino">Excluir treino</string>
    <string name="voltar">Voltar</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="adicionar">Adicionar</string>


    <!--Offline tests-->
    <string-array name="prof_list_test">
        <item>Renato Portaluppi</item>
        <item>Roger Guardiola</item>
        <item>Papito</item>
        <item>Abel Braga</item>
        <item>Joel Santana</item>
        <item>Big Phil</item>
    </string-array>
</resources>
