<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <TextView
        android:id="@+id/insira_nome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_exercicio"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insira_nome_tl"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/insira_nome_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insira_nome_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/exercicio"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/escolha_grupo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insira_nome_tl"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/grupo_muscular"
    />

    <Spinner
        android:id="@+id/grupos_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/escolha_grupo_tv"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        />

    <Button
            android:id="@+id/salvar_exercicio"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/salvar"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"


    />

</androidx.constraintlayout.widget.ConstraintLayout>